force-app/main/default/objects/Absence_Registration__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>1st work incapacity</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Extension</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Follow-up</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Relapse</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Incapacity to travel</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Protest certificate of the same duration</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Protest certificate of longer duration or other reason</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>