force-app/main/default/objects/Absence_Registration__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <description>US-OAPPMEDCHECK-244</description>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Controle</fullName>
                <default>true</default>
                <label>Controle</label>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>