force-app/main/default/objects/Absence_Registration__c/fields/Type_of_visit_requested__c.field-meta.xml
<CustomField>
    <fullName>Type_of_visit_requested__c</fullName>
    <description>US-OAPPMEDCHECK-244</description>
    <label>Type of visit requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>During the standard hours</fullName>
            </value>
            <value>
                <fullName>By appointment</fullName>
            </value>
            <value>
                <fullName>Double Passage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>