force-app/main/default/objects/Absence_Registration__c/fields/Urgent_MC__c.field-meta.xml
<CustomField>
    <fullName>Urgent_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to set the type of control to &apos;urgent&apos; instead of optimal in the flow. OAPPMEDCHECK-525</description>
    <label>Urgent_MC</label>
    <type>Checkbox</type>
</CustomField>