force-app/main/default/objects/Absence_Registration__c/fields/V_Modalite__c.field-meta.xml
<CustomField>
    <fullName>V_Modalite__c</fullName>
    <label>V - Modalité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>V_Modalit</valueSetName>
    </valueSet>
</CustomField>