force-app/main/default/objects/Absence_Registration__c/fields/VI_Determinants_cause__c.field-meta.xml
<CustomField>
    <fullName>VI_Determinants_cause__c</fullName>
    <label>VI - Déterminants de la cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VI_D_terminants_de_la_cause</valueSetName>
    </valueSet>
</CustomField>