force-app/main/default/objects/Absence_Registration__c/fields/VII_Vecu_du_stress_au_travail__c.field-meta.xml
<CustomField>
    <fullName>VII_Vecu_du_stress_au_travail__c</fullName>
    <description>US 259 - 396 - 305
Medical Codification for doctor&apos;s analysis</description>
    <label>VII - Vécu du stress au travail</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>