force-app/main/default/objects/Absence_Registration__c/fields/VIII_Prolongation__c.field-meta.xml
<CustomField>
    <fullName>VIII_Prolongation__c</fullName>
    <label>VIII - Prolongation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VIII_Prolongation</valueSetName>
    </valueSet>
</CustomField>