force-app/main/default/objects/Absence_Registration__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <description>For France, medical checks are mainly home visits, but some customers can request a direct convocation instead. OAPPMEDCHECK-394</description>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home_Visit_with_Potential_Convocation</fullName>
                <label>Home visit with potential convocation</label>
            </value>
            <value>
                <fullName>Home_Visit_without_Convocation</fullName>
                <label>Home visit without convocation</label>
            </value>
            <value>
                <fullName>Direct_Convocation</fullName>
                <label>Direct convocation</label>
            </value>
            <value>
                <fullName>Home Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>