force-app/main/default/objects/Absence_Registration__c/fields/work_accident__c.field-meta.xml
<CustomField>
    <fullName>work_accident__c</fullName>
    <description>OAPPMEDCHECK-525</description>
    <label>(work)accident</label>
    <type>Date</type>
</CustomField>