force-app/main/default/objects/Absence_Registration__c/fields/Workorder__c.field-meta.xml
<CustomField>
    <fullName>Workorder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OAPPMEDCHECK-98
Create workorder with criteria</description>
    <label>Workorder</label>
    <type>Checkbox</type>
</CustomField>