force-app/main/default/objects/Absence_Registration__c/recordTypes/MCM_BE.recordType-meta.xml
<RecordType>
    <fullName>MCM_BE</fullName>
    <active>true</active>
    <description>Record type defined for belgian absence registrations</description>
    <label>MCM - BE</label>
</RecordType>