force-app/main/default/objects/Absence_Registration__c/recordTypes/MCM_FR.recordType-meta.xml
<RecordType>
    <fullName>MCM_FR</fullName>
    <active>true</active>
    <description>Record type defined for french absence registrations</description>
    <label>MCM - FR</label>
</RecordType>