force-app/main/default/objects/Absence_Registration__c/validationRules/Certificate_end_date_verification.validationRule-meta.xml
<ValidationRule>
    <fullName>Certificate_end_date_verification</fullName>
    <active>true</active>
    <description>The certificate end date should be later than (or the same day as) the certificate start date.</description>
    <errorConditionFormula>Certificate_End_Date__c &lt; Certificate_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Certificate_End_Date__c</errorDisplayField>
    <errorMessage>The certificate end date should be later than (or the same day as) the certificate start date.</errorMessage>
</ValidationRule>