force-app/main/default/objects/Absence_Registration__c/validationRules/Certificate_mandatory_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Certificate_mandatory_fields</fullName>
    <active>true</active>
    <description>If the field Certificate? is set to true, the fields Certificate Start Date and Certificate End Date have to be filled.</description>
    <errorConditionFormula>AND( Certificate__c  = TRUE,OR( ISBLANK(Certificate_Start_Date__c),ISBLANK( Certificate_End_Date__c )))</errorConditionFormula>
    <errorMessage>Certificate Start Date and Certificate End Date have to be filled when the certificate box is checked.</errorMessage>
</ValidationRule>