force-app/main/default/objects/Absence_Registration__c/validationRules/Certificate_possession_mandatory_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Certificate_possession_mandatory_fields</fullName>
    <active>true</active>
    <description>If the field Certificate in our possession? is set to Yes, the Certificate Reception Date has to be filled. US-OAPPMEDCHECK-244</description>
    <errorConditionFormula>ISPICKVAL(Certificate_in_our_possession__c, &apos;Yes&apos;) &amp;&amp; ISBLANK(Certificate_Reception_Date__c)</errorConditionFormula>
    <errorDisplayField>Certificate_Reception_Date__c</errorDisplayField>
    <errorMessage>The Certificate Reception Date has to be filled when the field Certificate in our possession? is set to Yes</errorMessage>
</ValidationRule>