force-app/main/default/objects/Absence_Registration__c/validationRules/Check_start_date_disease.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_start_date_disease</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
if(
 ISPICKVAL(Type__c, &quot;0&quot;) &amp;&amp;  Start_date__c &lt;&gt;    Start_date_disease__c , true, false
),
if(
 ISPICKVAL(Type__c, &quot;C&quot;) &amp;&amp;  Start_date__c  =  Start_date_disease__c , true, false
))</errorConditionFormula>
    <errorMessage>If &apos;1st absence&apos; =&gt; &apos;start date disease&apos; = &apos;start date absence&apos;
If &apos;extension&apos; =&gt; &apos;start date disease&apos; &lt;&gt; &apos;start date absence&apos;</errorMessage>
</ValidationRule>