force-app/main/default/objects/Absence_Registration__c/validationRules/End_date_verification.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_verification</fullName>
    <active>true</active>
    <description>The end date should be after (or the same day) as the start date.</description>
    <errorConditionFormula>End_date__c &lt; Start_date__c</errorConditionFormula>
    <errorDisplayField>End_date__c</errorDisplayField>
    <errorMessage>The end date should be later than (or the same day as) the start date.</errorMessage>
</ValidationRule>