force-app/main/default/objects/Absence_Registration__c/validationRules/No_editing_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>No_editing_allowed</fullName>
    <active>true</active>
    <description>Once the absence is created, the account and employee should no longer be editable</description>
    <errorConditionFormula>ISCHANGED( Employee__c ) || ISCHANGED(  Account__c )</errorConditionFormula>
    <errorMessage>Changes on Employee and Account are not allowed once the absence is created.</errorMessage>
</ValidationRule>