force-app/main/default/objects/Absence_Registration__c/validationRules/NoErrorduringInvoicegeneration.validationRule-meta.xml
<ValidationRule>
    <fullName>NoErrorduringInvoicegeneration</fullName>
    <active>false</active>
    <description>Prevent user from checking Invoicing On Hold and retriggers the generation of invoice when it is already generated once.</description>
    <errorConditionFormula>AND(Invoicing_On_Hold__c==true,TEXT(Invoicing_Status__c)!=&apos;Error during Invoice generation&apos;)</errorConditionFormula>
    <errorMessage>Invoice is already generated.</errorMessage>
</ValidationRule>