force-app/main/default/objects/Absence_Registration__c/validationRules/Number_Extension_verification.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_Extension_verification</fullName>
    <active>true</active>
    <description>The number must be bigger than 0. US-OAPPMEDCHECK-244</description>
    <errorConditionFormula>Number_of_extension__c  &lt;=  0</errorConditionFormula>
    <errorDisplayField>Number_of_extension__c</errorDisplayField>
    <errorMessage>Please enter a number bigger than 0.</errorMessage>
</ValidationRule>