force-app/main/default/objects/Absence_Registration__c/validationRules/Postal_Code_Max_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_Max_length</fullName>
    <active>true</active>
    <description>Postal code needs to be of 4 caracters for BE &amp; LUX and of 5 for FRA</description>
    <errorConditionFormula>IF (  
ISPICKVAL(Country__c, &apos;Belgium&apos;) || ISPICKVAL(Country__c, &apos;LUX&apos;)  &amp;&amp;  ((LEN( Postal_code__c ) &gt; 4)  || (LEN( Postal_code__c )) &lt; 4), true, 
IF (
ISPICKVAL(Country__c, &apos;FR&apos;) &amp;&amp;  ((LEN( Postal_code__c ) &gt; 5)  || (LEN( Postal_code__c )) &lt; 5), true, false ))</errorConditionFormula>
    <errorDisplayField>Postal_code__c</errorDisplayField>
    <errorMessage>Postal code needs to be of 4 caracters for BE or LUX and of 5 for FRA.</errorMessage>
</ValidationRule>