force-app/main/default/objects/Absence_Registration__c/validationRules/Prevent_status_change_with_a_On_hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_status_change_with_a_On_hold</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c), 
     On_hold__c = true,
    IF(ISCHANGED(On_hold__c), false, true)
)</errorConditionFormula>
    <errorMessage>You cannot change the status with on hold checked</errorMessage>
</ValidationRule>