force-app/main/default/objects/Absence_Registration__c/validationRules/Provide_reason_of_cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>Provide_reason_of_cancellation</fullName>
    <active>true</active>
    <description>Provide a reason of cancellation when absence is cancelled</description>
    <errorConditionFormula>TEXT(Status__c ) = &apos;MC Canceled&apos;
&amp;&amp;  ISBLANK(TEXT( Reason_of_cancellation__c ))</errorConditionFormula>
    <errorMessage>A reason of cancellation is required</errorMessage>
</ValidationRule>