force-app/main/default/objects/Absence_Registration__c/validationRules/Timeslots_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Timeslots_format</fullName>
    <active>true</active>
    <description>Formatting text type Timeslots into 00:00 to fit requirements in the Flow Absence Registration FR. US-OAPPMEDCHECK-385</description>
    <errorConditionFormula>AND( NOT(ISBLANK(Authorised_from_First_Timeslot__c)),
NOT(ISBLANK(Authorised_to_First_Timeslot__c)),
NOT(ISBLANK(Authorised_from_Second_Timeslot__c)),
NOT(ISBLANK(Authorised_to_Second_Timeslot__c)),
OR(
NOT(REGEX(Authorised_from_First_Timeslot__c ,&apos;^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$&apos;)),
NOT(REGEX( Authorised_to_First_Timeslot__c  ,&apos;^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$&apos;)),
NOT(REGEX( Authorised_from_Second_Timeslot__c  ,&apos;^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$&apos;)),
NOT(REGEX( Authorised_to_Second_Timeslot__c  ,&apos;^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$&apos;))))</errorConditionFormula>
    <errorMessage>The 4 timeslots fields must respect the following format: 00:00.</errorMessage>
</ValidationRule>