force-app/main/default/objects/Absence_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Reason__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Start_date__c</columns>
    <columns>End_date__c</columns>
    <filterScope>Mine</filterScope>
    <label>0. Toutes mes demandes</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>