force-app/main/default/objects/Absence_Registration__c/listViews/BE_All_Medical_Checks.listView-meta.xml
<ListView>
    <fullName>BE_All_Medical_Checks</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Request_Date_and_Time__c</columns>
    <columns>Start_date__c</columns>
    <columns>Controle_requested__c</columns>
    <columns>Status_MC__c</columns>
    <columns>Result_Code__c</columns>
    <columns>Spontaneous_resumption_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Absence_Registration__c.MCM_BE</value>
    </filters>
    <label>1. All Medical Checks</label>
    <sharedTo>
        <group>MCM_BE_Customer_Users</group>
    </sharedTo>
</ListView>