force-app/main/default/objects/Absence_Registration__c/listViews/FR_Absences.listView-meta.xml
<ListView>
    <fullName>FR_Absences</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Start_date__c</columns>
    <columns>Certificate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Share_to_MCM_FR__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>FR Absences</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>