force-app/main/default/objects/Absence_Registration__c/listViews/FR_En_cours_de_traitement.listView-meta.xml
<ListView>
    <fullName>FR_En_cours_de_traitement</fullName>
    <columns>NAME</columns>
    <columns>Request_Date_and_Time__c</columns>
    <columns>Employee__c</columns>
    <columns>Account__c</columns>
    <columns>Status_MC__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_MC__c</field>
        <operation>equals</operation>
        <value>MC ongoing</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Absence_Registration__c.MCM_FR</value>
    </filters>
    <label>En cours de traitement</label>
    <sharedTo>
        <group>MCM_FR_Customer_Users</group>
    </sharedTo>
</ListView>