force-app/main/default/objects/Absence_Registration__c/listViews/MCM_General_FR_Absence_Registration.listView-meta.xml
<ListView>
    <fullName>MCM_General_FR_Absence_Registration</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Queue</filterScope>
    <label>4. Toutes les demandes du portail client</label>
    <queue>MCM_General_FR</queue>
    <sharedTo>
        <group>FR_MCM</group>
    </sharedTo>
</ListView>