force-app/main/default/objects/Absence_Registration__c/listViews/MCM_Invoice_FR_Absence_Registration.listView-meta.xml
<ListView>
    <fullName>MCM_Invoice_FR_Absence_Registration</fullName>
    <filterScope>Queue</filterScope>
    <label>CVM Facturation</label>
    <queue>MCM_Invoice_FR</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>