force-app/main/default/objects/Absence_Registration__c/listViews/Mes_Questions_clients.listView-meta.xml
<ListView>
    <fullName>Mes_Questions_clients</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Employee__c</columns>
    <columns>Request_Date_and_Time__c</columns>
    <columns>Start_date__c</columns>
    <columns>End_date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Customer_Question__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Securex_Number_main_account__c</field>
        <operation>notEqual</operation>
        <value>0191217</value>
    </filters>
    <label>5. Mes questions clients</label>
    <sharedTo>
        <group>FR_MCM</group>
    </sharedTo>
</ListView>